# back_testing

./: README.md  pyproject.toml  requirements.txt
backtester/: __init__.py  __main__.py  config.py  data.py  engine.py  metrics.py  pricing.py  report.py  strategy.py
docs/: ROADMAP.md
output/: monthly_results.csv
tests/: test_engine.py  test_pricing.py  test_strategy.py
